Fix alignment issue on system modal.
closes #477

--- a/frontend/src/components/shared/popUps/systemModal/systemModal.scss
+++ b/frontend/src/components/shared/popUps/systemModal/systemModal.scss
@@ -171,7 +171,6 @@
     justify-content: center;
     margin-top: 2px;
     margin-bottom: 16px;
-    padding: 8px 20px 8px 7px;
     .cancel-btn {
       background: #efe1ff;
       color: #773cbd;
@@ -220,6 +219,10 @@
     .MuiDialog-paper {
       width: 100%;
       margin: 5px;
+    }
+    .MuiDialogActions-root {
+      padding-left: 20px;
+      padding-right: 20px;
     }
   }
 }
